--- a/package.json
+++ b/package.json
@@ -1,9 +1,16 @@
 {
   "name": "whatsapp-sender",
+  "version": "1.0.0",
+  "description": "WhatsApp Message Sender with authentication",
   "type": "module",
+  "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   },
   "dependencies": {
     "@whiskeysockets/baileys": "^6.5.0",
@@ -18,5 +25,12 @@
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
-  }
+  },
+  "keywords": [
+    "whatsapp",
+    "bot",
+    "messaging"
+  ],
+  "author": "Kafir",
+  "license": "ISC"
 }
